--- a/system-cms/cms/cms_es.yaml
+++ b/system-cms/cms/cms_es.yaml
@@ -48,19 +48,19 @@ Error:
         ExecuteProcess: No hay permiso para ejecutar el proceso '${processId}'
     Request:
       App:
-        InMaintenace: La aplicación '${appName}' no está disponible actualmente debido a mantenimiento.
+        InMaintenance: La aplicación '${appName}' no está disponible actualmente debido a mantenimiento.
         NameMissing: Falta el nombre de la aplicación
         NotFound: La aplicación solicitada no fue encontrada
       CaseMap:
         NoProcessId: ¡El parámetro de proceso secundario '${processId}' debe ser definido!
         RequestPathNoUUID: No se encontró UUID de Case Map en la ruta de la solicitud
         WrongFormat: ¡El UUID de Case Map solicitado tiene un formato incorrecto!
-      BeanNotFound: Bean '${object}' no encontrado en la solicitud. ¿Falta un filtro?
+      BeanNotFound: Bean '${beanClass}' no encontrado en la solicitud. ¿Falta un filtro?
       ContentObject:
-        IsNull: El objeto de contenido '${object}' no tiene valor
-        IsNoPage: El objeto de contenido '${object}' no se puede usar como página.
-        NotFound: El objeto de contenido '${object}' no fue encontrado
-        NotResolved: No se resolvió valor de objeto de contenido para '${object}'.
+        IsNull: El objeto de contenido '${cmsUri}' no tiene valor
+        IsNoPage: El objeto de contenido '${cmsUri}' no se puede usar como página.
+        NotFound: El objeto de contenido '${cmsUri}' no fue encontrado
+        NotResolved: No se resolvió valor de objeto de contenido para '${cmsUri}'.
       Dialog:
         IdNotFound: Tiempo de ejecución de diálogo '${dialogId}' no encontrado
         NotAvailable: El tiempo de ejecución de diálogo ya no está disponible
@@ -89,7 +89,7 @@ Error:
         InvalidRequest: Tipo de solicitud no soportado ${type} 
         WrongState: El estado de PageEngine debería ser 'RUNNING' pero era '${serviceState}'
       Pm:
-        InMaintenace: El modelo de proceso '${pmName}' de la aplicación '${appName}' no está disponible actualmente debido a mantenimiento.
+        InMaintenance: El modelo de proceso '${pmName}' de la aplicación '${appName}' no está disponible actualmente debido a mantenimiento.
         NotFound: El modelo de proceso solicitado de la aplicación '${appName}' no fue encontrado.
       Pmv:
         InMaintenance: La versión del modelo de proceso '${pmvId}' del modelo de proceso '${pmName}' de la aplicación '${appName}' no está disponible actualmente debido a mantenimiento.
@@ -98,11 +98,11 @@ Error:
         NotFound: La versión del modelo de proceso solicitada no fue encontrada.
         PmNotFound: La versión del modelo de proceso solicitada del modelo de proceso '${pmName}' de la aplicación '${appName}' no fue encontrada.
       Render:  
-        NoTxtObject: No es un objeto de tipo texto '${object}'
-        NoImageObject: No es una imagen '${object}'
-        NoMimeObject: No se puede renderizar la imagen al tipo MIME '${object}'
+        NoTxtObject: No es un objeto de tipo texto '${cmsUri}'
+        NoImageObject: No es una imagen '${cmsUri}'
+        NoMimeObject: No se puede renderizar la imagen al tipo MIME '${mimeType}'
         NoResponse: No hay una respuesta de renderizador configurada
-      RestPathMissing: Falta la ruta Rest
+      RestPathMissing: Falta la ruta REST
       SessionExpired: Su sesión ha expirado.
       Start:
         NotFoundPmv: El inicio de proceso solicitado en la versión del modelo de proceso '${pmvId}' del modelo de proceso '${pmName}' de la aplicación web '${appName}' no fue encontrado.
