--- a/dev-workflow-ui-web-test/pom.xml
+++ b/dev-workflow-ui-web-test/pom.xml
@@ -4,9 +4,9 @@
 
   <parent>
     <groupId>ch.ivyteam.workflow</groupId>
-    <artifactId>dev-workflow-ui-config-test</artifactId>
+    <artifactId>dev-workflow-ui-config</artifactId>
     <version>13.2.0-SNAPSHOT</version>
-    <relativePath>../maven/config/test</relativePath>
+    <relativePath>../maven/config</relativePath>
   </parent>
 
   <groupId>ch.ivyteam.workflow</groupId>
