--- a/dev-workflow-ui-test-data/pom.xml
+++ b/dev-workflow-ui-test-data/pom.xml
@@ -20,6 +20,10 @@
       <groupId>com.axonivy.ivy.api</groupId>
       <artifactId>ivy-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.axonivy.ivy.spi</groupId>
+      <artifactId>ivy-process-extension-spi</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
