--- a/dev-workflow-ui/pom.xml
+++ b/dev-workflow-ui/pom.xml
@@ -30,10 +30,14 @@
       <groupId>com.axonivy.ivy.api</groupId>
       <artifactId>ivy-workflow-index-api</artifactId>
     </dependency>
+
     <dependency>
-      <groupId>com.axonivy.ivy.api</groupId>
-      <artifactId>ivy-runtime</artifactId>
-      <scope>provided</scope>
+      <groupId>com.axonivy.ivy.api.restricted</groupId>
+      <artifactId>ivy-engine-cleanup-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.axonivy.ivy.api.restricted</groupId>
+      <artifactId>ivy-security-api</artifactId>
     </dependency>
   </dependencies>
 
