--- a/maven/config/pom.xml
+++ b/maven/config/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>com.axonivy.ivy.api</groupId>
     <artifactId>ivy-project-parent</artifactId>
-    <version>13.2.0</version>
+    <version>13.2.1-SNAPSHOT</version>
     <relativePath></relativePath>
   </parent>
 
