--- a/dev-workflow-ui-test-data/config/custom-fields.yaml
+++ b/dev-workflow-ui-test-data/config/custom-fields.yaml
@@ -1,23 +1,13 @@
+# yaml-language-server: $schema=https://json-schema.axonivy.com/config/14.0.0/custom-fields.json
 # == Custom Fields Information ==
 # 
 # You can define here your project custom fields.
 #
 CustomFields:
   Tasks:
-  #    MyTaskCustomField:
-  #      Label: My task custom field
-  #      Description: This new task custom field can be used to ...
-  #      Type: STRING
     CustomerKind:
-      Type: NUMBER       
+      Type: NUMBER
   Cases:
-  #    MyCaseCustomField:
-  #      Label: My case custom field
-  #      Description: This new case custom field can be used to ...
-  #      Type: STRING   
     ProductKind:
-      Type: STRING     
-  Starts:
-#    MyStartCustomField:
-#      Label: My start custom field
-#      Description: This new start custom field can be used to ...
+      Type: STRING
+
